--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,16 +3,17 @@ name = "afl_runner"
 authors = ["0x434b <admin@0x434b.dev"]
 repository = "https://github.com/0xricksanchez/AFL_Runner"
 description = "AFL Runner is a tool to run an efficient multi-core AFLPlusPlus campaign."
-version = "0.1.0"
+version = "0.1.3"
 edition = "2021"
 keywords = ["afl", "fuzzing", "fuzzer", "fuzz"]
 license = "MIT"
 
 [dependencies]
+anyhow = "1.0.79"
 clap = { version = "4.4.18", features = ["wrap_help", "string", "derive"] }
 rand = "0.8.5"
 sysinfo = "0.30.5"
-tmux_interface = "0.3.1"
+upon = "0.8.0"
 
 [profile.release]
 opt-level = 3
