feat: allow supplying a configuration file

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,17 +3,19 @@ name = "afl_runner"
 authors = ["0x434b <admin@0x434b.dev"]
 repository = "https://github.com/0xricksanchez/AFL_Runner"
 description = "AFL Runner is a tool to run an efficient multi-core AFLPlusPlus campaign."
-version = "0.1.7"
+version = "0.1.8"
 edition = "2021"
 keywords = ["afl", "fuzzing", "fuzzer", "fuzz"]
 license = "MIT"
 
 [dependencies]
-anyhow = "1.0.81"
+anyhow = "1.0.82"
 clap = { version = "4.5.4", features = ["wrap_help", "string", "derive"] }
 rand = "0.8.5"
-sysinfo = "0.30.8"
+sysinfo = "0.30.10"
 upon = "0.8.1"
+toml = "0.8.12"
+serde = { version = "1.0.197", features = ["derive"] }
 
 [profile.release]
 opt-level = 3
