feat: introduce a TUI for local runs
feat: introduce a TUI for local runs

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "afl_runner"
 authors = ["0x434b <admin@0x434b.dev"]
 repository = "https://github.com/0xricksanchez/AFL_Runner"
 description = "AFL Runner is a tool to run an efficient multi-core AFLPlusPlus campaign."
-version = "0.1.8"
+version = "0.2.0"
 edition = "2021"
 keywords = ["afl", "fuzzing", "fuzzer", "fuzz"]
 license = "MIT"
@@ -12,10 +12,12 @@ license = "MIT"
 anyhow = "1.0.82"
 clap = { version = "4.5.4", features = ["wrap_help", "string", "derive"] }
 rand = "0.8.5"
-sysinfo = "0.30.10"
+sysinfo = "0.30.11"
 upon = "0.8.1"
 toml = "0.8.12"
-serde = { version = "1.0.197", features = ["derive"] }
+serde = { version = "1.0.198", features = ["derive"] }
+ratatui = { version = "0.26.2", features = ["crossterm", "all-widgets"] }
+crossterm = "0.27.0"
 
 [profile.release]
 opt-level = 3
