--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,11 +2,12 @@
 name = "afl_runner"
 authors = ["0x434b <admin@0x434b.dev"]
 repository = "https://github.com/0xricksanchez/AFL_Runner"
-description = "AFL Runner is a tool to run an efficient multi-core AFLPlusPlus campaign."
+description = "Scaling best-practice AFLPlusPlus fuzzing campaigns made easy"
 version = "0.3.5"
 edition = "2021"
 keywords = ["afl", "fuzzing", "fuzzer", "fuzz"]
 license = "Apache-2.0"
+
 
 [dependencies]
 anyhow = "1.0.82"
