--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,11 +2,25 @@
 name = "afl_runner"
 authors = ["0x434b <admin@0x434b.dev"]
 repository = "https://github.com/0xricksanchez/AFL_Runner"
-description = "AFL Runner is a tool to run an efficient multi-core AFLPlusPlus campaign."
-version = "0.3.5"
+description = "Scaling best-practice AFLPlusPlus fuzzing campaigns made easy"
+version = "0.4.0"
 edition = "2021"
-keywords = ["afl", "fuzzing", "fuzzer", "fuzz"]
+keywords = [
+  "afl",
+  "fuzzing",
+  "fuzzer",
+  "fuzz",
+  "afl++",
+  "aflplusplus",
+  "testing",
+  "fuzz-testing",
+  "fuzz-test",
+]
 license = "Apache-2.0"
+
+[[bin]]
+name = "aflr"
+path = "src/main.rs"
 
 [dependencies]
 anyhow = "1.0.82"
@@ -15,7 +29,7 @@ rand = "0.8.5"
 sysinfo = "0.30.11"
 upon = "0.8.1"
 toml = "0.8.12"
-serde = { version = "1.0.198", features = ["derive"] }
+serde = { version = "1.0.199", features = ["derive"] }
 ratatui = { version = "0.26.2", features = ["crossterm", "all-widgets"] }
 crossterm = "0.27.0"
 
