--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,7 @@ crossterm = "0.28.1"
 chrono = "0.4.38"
 uuid = { version = "1.11.0", features = ["v4"] }
 tempfile = "3"
+once_cell = "1.20.2"
 
 [dev-dependencies]
 cargo-make = "0.37.23"
