--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -29,23 +29,25 @@ jobs:
         uses: actions/cache@v3
         with:
           path: |
-            /usr/local/bin/llvm*
+            /usr/lib/llvm-18
             ~/.cargo
             ~/.local/bin
-          key: ${{ runner.os }}-tools-${{ hashFiles('**/Cargo.lock') }}
+          key: ${{ runner.os }}-tools-llvm18-${{ hashFiles('**/Cargo.lock') }}
           restore-keys: |
-            ${{ runner.os }}-tools-
+            ${{ runner.os }}-tools-llvm18-
 
       # Install tools if not cached
       - name: Install LLVM tools
-        if: steps.cache-tools.outputs.cache-hit != 'true'
         run: |
-          wget https://apt.llvm.org/llvm.sh
-          chmod +x llvm.sh
-          sudo ./llvm.sh 18
-          sudo apt-get install -y lcov
-          sudo ln -s /usr/lib/llvm-18/bin/llvm-profdata /usr/local/bin/llvm-profdata
-          sudo ln -s /usr/lib/llvm-18/bin/llvm-cov /usr/local/bin/llvm-cov
+          # Always create the symlinks since they're not cached
+          if [ ! -d "/usr/lib/llvm-18" ]; then
+            wget https://apt.llvm.org/llvm.sh
+            chmod +x llvm.sh
+            sudo ./llvm.sh 18
+            sudo apt-get install -y lcov
+          fi
+          sudo ln -sf /usr/lib/llvm-18/bin/llvm-profdata /usr/local/bin/llvm-profdata
+          sudo ln -sf /usr/lib/llvm-18/bin/llvm-cov /usr/local/bin/llvm-cov
 
       - name: Add fake afl-fuzz into path
         run: |
