refactor: add some additional sanity-checks for the coverage component (#67)

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -22,12 +22,41 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
+
+      # Set up tool cache
+      - name: Cache tools
+        id: cache-tools
+        uses: actions/cache@v3
+        with:
+          path: |
+            /usr/lib/llvm-18
+            ~/.cargo
+            ~/.local/bin
+          key: ${{ runner.os }}-tools-llvm18-${{ hashFiles('**/Cargo.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-tools-llvm18-
+
+      # Install tools if not cached
+      - name: Install LLVM tools
+        run: |
+          # Always create the symlinks since they're not cached
+          if [ ! -d "/usr/lib/llvm-18" ]; then
+            wget https://apt.llvm.org/llvm.sh
+            chmod +x llvm.sh
+            sudo ./llvm.sh 18
+            sudo apt-get install -y lcov
+          fi
+          sudo ln -sf /usr/lib/llvm-18/bin/llvm-profdata /usr/local/bin/llvm-profdata
+          sudo ln -sf /usr/lib/llvm-18/bin/llvm-cov /usr/local/bin/llvm-cov
+
       - name: Add fake afl-fuzz into path
         run: |
           mkdir -p $HOME/.local/bin
           cp /bin/ls $HOME/.local/bin/afl-fuzz
+          echo "$HOME/.local/bin" >> $GITHUB_PATH
 
       - name: Build
         run: cargo build --verbose
+
       - name: Run tests
         run: cargo test --verbose
