--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,9 +8,18 @@ edition = "2021"
 keywords = ["afl", "fuzzing", "fuzz-testing", "testing", "fuzzer"]
 license = "Apache-2.0"
 
+[features]
+default = []
+completion = ["clap_complete"]
+
 [[bin]]
 name = "aflr"
 path = "src/main.rs"
+
+[[bin]]
+name = "generate_completions"
+path = "src/bin/generate_completions.rs"
+required-features = ["completion"]
 
 [dependencies]
 anyhow = "1.0.93"
@@ -28,6 +37,7 @@ tempfile = "3"
 once_cell = "1.20.2"
 rayon = "1.10.0"
 glob = "0.3.1"
+clap_complete = { version = "4.5.38", optional = true }
 
 [dev-dependencies]
 cargo-make = "0.37.23"
