--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
 name = "afl_runner"
-authors = ["0x434b <admin@0x434b.dev"]
+authors = ["0x434b <mail@0x434b.dev"]
 repository = "https://github.com/0xricksanchez/AFL_Runner"
 description = "Scaling best-practice AFLPlusPlus fuzzing campaigns made easy"
 version = "0.5.1"
-edition = "2021"
+edition = "2024"
 keywords = ["afl", "fuzzing", "fuzz-testing", "testing", "fuzzer"]
 license = "Apache-2.0"
 
@@ -22,25 +22,25 @@ path = "src/bin/generate_completions.rs"
 required-features = ["completion"]
 
 [dependencies]
-anyhow = "1.0.94"
-clap = { version = "4.5.23", features = ["wrap_help", "string", "derive"] }
-rand = "0.8.5"
-sysinfo = "0.33.0"
-upon = "0.8.1"
-toml = "0.8.19"
-serde = { version = "1.0.216", features = ["derive"] }
+anyhow = "1.0.97"
+clap = { version = "4.5.32", features = ["wrap_help", "string", "derive"] }
+rand = "0.9.0"
+sysinfo = "0.33.1"
+upon = "0.9.0"
+toml = "0.8.20"
+serde = { version = "1.0.219", features = ["derive"] }
 ratatui = { version = "0.29.0", features = ["crossterm", "all-widgets"] }
 crossterm = "0.28.1"
-chrono = "0.4.39"
-uuid = { version = "1.11.0", features = ["v4"] }
-tempfile = "3.14.0"
-once_cell = "1.20.2"
+chrono = "0.4.40"
+uuid = { version = "1.16.0", features = ["v4"] }
+tempfile = "3.19.0"
+once_cell = "1.21.1"
 rayon = "1.10.0"
-glob = "0.3.1"
-clap_complete = { version = "4.5.38", optional = true }
+glob = "0.3.2"
+clap_complete = { version = "4.5.46", optional = true }
 
 [dev-dependencies]
-cargo-make = "0.37.23"
+cargo-make = "0.37.24"
 
 [workspace]
 members = ["examples"]
